2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components.Commands/CommandRouterContainer.cs:
	  Added support for lazy command router container.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.csproj: Updated dependencies. We now
	  depend on gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components/ConsoleView.cs: Fix warnings.

	* MonoDevelop.Components/FolderListSelector.cs: Fix button
	  sensitivity issue.

2009-08-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* gtk-gui/objects.xml:
	* gtk-gui/generated.cs:
	* MonoDevelop.Components.csproj:
	* MonoDevelop.Components/FolderListSelector.cs:
	* gtk-gui/MonoDevelop.Components.FolderListSelector.cs: New
	  folder list selector widget.

2009-08-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.Chart\BasicChart.cs: Handle some
	  arithmetic overflow cases.

2009-08-06  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Components.csproj:
	* MonoDevelop.Components.Chart/Serie.cs:
	* MonoDevelop.Components.Chart/BasicChart.cs: Some
	  improvements in the chart widget. Use cairo to render the
	  lines. Added a new display mode for series.

2009-08-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components.Commands/CommandRouterContainer.cs:
	  Handled null childs.

2009-07-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.Commands/CommandManager.cs:
	  Implemented ApplicationFocusIn/Out events.

2009-07-21  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/objects.xml:
	* MonoDevelop.Components.csproj: Put objects.xml back. There
	  are still some issue with reflection-only stetic.

2009-07-21  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/objects.xml: