@@ -1,5 +1,12 @@
 2009-08-27  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Components.Commands/CommandMenu.cs:
+	* MonoDevelop.Components.Commands/CommandManager.cs:
+	* MonoDevelop.Components.Commands/CommandEntrySet.cs: Command
+	  menus are now created on demand.
+
+2009-08-27  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Components.Commands/CommandRouterContainer.cs:
 	  Added support for lazy command router container.
 
